# Arcade

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/atlas_api/: __init__.py  app.py  config.py  main.py  schemas.py
apps/console/: README.md  globals.css  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/console/app/: layout.tsx  page.tsx
apps/console/components/: app-shell.tsx  section-card.tsx  status-table.tsx
apps/console/lib/: runs.ts
apps/console/test/: directory-ui.test.tsx  helpdesk-ui.test.tsx  inbox-ui.test.tsx  runs-ui.test.tsx  shell.test.tsx  (+1 more)
apps/worker/: README.md  pyproject.toml
apps/worker/src/atlas_worker/: __init__.py  agent_execution.py  benchmark_fixture.py  benchmark_runner.py  browser_tool.py  config.py  demo_browser.py  directory_tool.py  doc_tool.py  dummy_execution.py  identity_tool.py  isolated_command_tool.py  main.py  screenshot_tool.py  scripted_smoke.py  ticket_tool.py  tool_registry.py
infra/: README.md  docker-compose.yml
infra/migrations/: 0001_run_spine.down.sql  0001_run_spine.up.sql
infra/scripts/: phase2_dummy_run_demo.sh  phase4_agent_demo.sh  phase5_policy_demo.sh  phase6_benchmark_demo.sh
services/bastion-gateway/: README.md  pyproject.toml
services/bastion-gateway/policies/: v1_helpdesk_policy.json
services/bastion-gateway/src/bastion_gateway/: __init__.py  contracts.py  gateway.py  main.py  policy.py  sandbox.py
services/browser-runner/: README.md  pyproject.toml
services/browser-runner/src/browser_runner/: __init__.py  runner.py
tests/: README.md  smoke_check.py  test_agent_execution.py  test_api_health.py  test_atlas_synth.py  test_bastion_interception.py  test_bastion_policy.py  test_bastion_sandbox.py  test_browser_runner.py  test_browser_tool.py  test_comparison_models.py  test_db_migrations.py  test_directory_api.py  test_directory_service.py  test_domain_models.py  test_execution_contracts.py  test_helpdesk_api.py  test_helpdesk_environment_contracts.py  test_helpdesk_graders.py  test_helpdesk_service.py  test_inbox_api.py  test_inbox_service.py  test_lookup_tools.py  test_model_gateway.py  test_phase3_consistency.py  test_phase3_public_contracts.py  test_run_api.py  test_run_state_machine.py  test_run_store.py  test_screenshot_artifacts.py  test_serialization.py  test_ticket_tool.py  test_ticket_tool_adapter.py  test_tool_registry.py  test_wiki_api.py  test_wiki_service.py  test_worker_benchmark_fixture.py  test_worker_benchmark_runner.py  test_worker_boot.py  test_worker_config.py  (+2 more)
(+41 files in other folders)
