[project]
name = "atlas-bastion-workspace"
version = "0.1.0"
description = "Atlas + Bastion root Python workspace"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "pre-commit>=4.0.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
  "services/browser-runner",
  "services/bastion-gateway",
  "packages/atlas-core",
  "packages/atlas-synth",
  "packages/atlas-env-helpdesk",
  "packages/atlas-graders",
  "packages/model-gateway",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
