[project]
name = "bastion-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "atlas-core",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[tool.uv.sources]
atlas-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bastion_gateway"]
