[project]
name = "browser-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["atlas-core", "pydantic>=2.9.0", "playwright>=1.48.0"]

[tool.uv.sources]
atlas-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_runner"]
